--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>VueJS Tutorials</title>
 </head>
 <body>
-    <div id="vue-app"></div>
+    <div id="vue-app">
+        <h1> {{ name }}</h1>
+    </div>
 
 
 
