--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
     <title>VueJS Tutorials</title>
 </head>
 <body>
     <div id="vue-app">
-        <h1> {{ name }}</h1>
+        <h1>{{ name }}</h1>
+        <h1>{{ job }}</h1>
+        <h1>{{ greet('afternoon') }}</h1>
+        <a v-bind:href="website">Google</a>
+        <p v-html="websiteTag"></p>
     </div>
 
 
